# nototools

./: .editorconfig  .gitignore  .travis.yml  CONTRIBUTORS  Makefile  README.md  chart.py  familyname_and_styles.txt  font_tests.py  noto_lint.py  notodiff.py  precommit.sh  pycairoft.py  pyproject.toml  requirements.txt  sample_text.html  setup.cfg  setup.py
nototools/: add_emoji_gsub.py  add_vs_cmap.py  android_patches.py  arimo_config.txt  autofix_for_phase3.py  autofix_for_release.py  charsets.py  check_familyname_and_styles.py  cldr_data.py  cmap_block_coverage.py  cmap_data.py  codepoint_groups.txt  collect_cldr_punct.py  compare_cmap_data.py  compare_fonts.py  compare_summary.py  coverage.py  coverage_test.py  create_image.py  decompose_ttc.py  drop_hints.py  dump_otl.py  emoji_ordering.py  extra_locale_data.py  extract_ohchr_attributions.py  family_name_info_p2.xml  family_name_info_p3.xml  familyname_and_styles.txt  fix_khmer_and_lao_coverage.py  fix_noto_cjk_thin.py  font_caching.py  font_data.py  fontdiff.py  fonts.conf  gen_cplist.py  generate_coverage_data.py  generate_dingbats_html.py  generate_emoji_name_data.py  generate_fontdiff_input.py  generate_lang_font_table.py  (+62 more)
sample_texts/: attributions.txt  cs-Latn_udhr.txt  dz-Tibt_udhr.txt  fa-Arab.txt  gn-Latn_udhr.txt  gu-Gujr_udhr.txt  ka-Geor.txt  kbd-Cyrl_udhr.txt  koi-Cyrl_udhr.txt  kri-Latn_udhr.txt  krl-Latn_udhr.txt  mai-Deva_udhr.txt  mn-Mong.txt  os-Cyrl_udhr.txt  pa-Guru.txt  qug-Latn_udhr.txt  se-Latn_udhr.txt  sl-Latn_udhr.txt  und-Adlm_chars.txt  und-Aghb_chars.txt  und-Ahom_chars.txt  (+74 more)
(+47 files in other folders)
