[build-system]
# Minimum requirements for the build system to execute.
# PEP 508 specifications for PEP 518.
requires = [
  "setuptools >= 21.0.0,!=24.0.0,!=34.0.0,!=34.0.1,!=34.0.2,!=34.0.3,!=34.1.0,!=34.1.1,!=34.2.0,!=34.3.0,!=34.3.1,!=34.3.2,!=36.2.0",  # PSF/ZPL
  "wheel",
  "setuptools_scm",
]
build-backend="setuptools.build_meta"

[tool.black]
line-length = 120
safe = true
target-version = ["py27", "py35", "py36", "py37", "py38"]
skip-string-normalization = true

[tool.isort]
line_length = 120
multi_line_output = 3
force_single_line = true
