[metadata]
project_urls =
  Bug Tracker = https://github.com/googlefonts/nototools/issues

[flake8]
exclude =
  .git,
  dist,
  *lib/python*,
  *egg,
  build,
  __init__.py,
ignore =
  E203,
# whitespace before ':'
  W503,
# line break before binary operator
  E266,
# too many leading '#' for block comment
  W605,
# invalid escape sequence - we can not use ur prefixes for strings as it not supported for py37+
  E741,
# ambiguous variable name - temporary ignore because it may affect API
  D
# Do not validate docstrings
show-pep8 = True
show-source = True
count = True
max-line-length = 120
